# skyscrapers

./: .gitignore  .tagpr  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: deploy-web.yml  player-dist.yml  rust.yml  tagpr.yml  tauri-check.yml  tauri-release.yml  web.yml
docs/: logic-solver-analysis.md
latin-sampler/: Cargo.toml  README.md
latin-sampler/benches/: sampling.rs
latin-sampler/examples/: coverage.rs  generate.rs  independence_check.rs  square_counts.rs  stats.rs  uniformity.rs  uniformity_test.rs
latin-sampler/src/: jacobson_matthews.rs  lib.rs  moves.rs  sampler.rs  square.rs
scripts/: build-player-dist.sh
skyscrapers-analysis/: Cargo.toml  README.md
skyscrapers-analysis/src/: main.rs
skyscrapers-cli/: Cargo.toml  README.md
skyscrapers-cli/src/: main.rs
skyscrapers-core/: Cargo.toml  README.md
skyscrapers-core/src/: board.rs  clues.rs  lib.rs  parse.rs  puzzle.rs  solution.rs
skyscrapers-generator/: Cargo.toml  README.md
skyscrapers-generator/src/: lib.rs  wasm.rs
skyscrapers-player/: README.md  package-lock.json  package.json  tsconfig.json
skyscrapers-player/src/: index.ts  wasm.ts
skyscrapers-player/src/components/: ClueCell.tsx  ConfirmDialog.tsx  GameControls.tsx  HighlightSelector.tsx  HintPanel.tsx  NumberPad.tsx  Player.tsx
skyscrapers-player/src/engine/: puzzle-result.test.ts  puzzle-result.ts  types.test.ts  types.ts  wasm-engine.test.ts  wasm-engine.ts
skyscrapers-player/src/state/: reducer.ts  types.ts
skyscrapers-player/src/styles/: app.css
skyscrapers-player/src/utils/: board.test.ts  board.ts  encoding.test.ts  encoding.ts  hint.test.ts  hint.ts  validation.test.ts  validation.ts
skyscrapers-solver/: Cargo.toml  README.md
skyscrapers-solver/benches/: solvers.rs
skyscrapers-solver/src/: backtracking.rs  candidates.rs  lib.rs  logic.rs  sat.rs
skyscrapers-solver/src/logic/: analysis_hooks.rs  bottleneck.rs  difficulty.rs  mod.rs  state.rs  techniques.rs
skyscrapers-solver/src/logic/techniques/: als_xz.rs  clue_pruning.rs  cross_line_permutation.rs  dual_clue_permutation.rs  forcing_chain.rs  hidden_sets.rs  hidden_singles.rs  mod.rs  naked_sets.rs  naked_singles.rs  permutation.rs  prefix_permutation.rs  visibility.rs  visibility_analysis.rs  w_wing.rs  x_wing.rs  xy_chain.rs  xy_wing.rs
skyscrapers-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
skyscrapers-tauri/src/: App.tsx
skyscrapers-tauri/src-tauri/: Cargo.toml  tauri.conf.json
skyscrapers-tauri/src-tauri/icons/: icon.icns
skyscrapers-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
skyscrapers-tauri/src/engine/: tauri-engine.ts
skyscrapers-web/: DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
skyscrapers-web/src/: App.tsx  board.ts  encoding.ts  hint.test.ts  hint.ts  samples.ts  types.ts  validation.test.ts  validation.ts  wasm.test.ts  wasm.ts
skyscrapers-web/src/components/: BoardCell.tsx  ClueCell.tsx  ConfirmDialog.tsx  GameControls.tsx  HintPanel.tsx  HowToPlayModal.tsx  NumberPad.tsx  PuzzleGrid.tsx  PuzzlePage.tsx
skyscrapers-web/src/engine/: wasm-engine.ts
skyscrapers-web/src/styles/: app.css  puzzle.css
src/: index.ts
src/components/: Player.tsx  PuzzleGrid.tsx
src/engine/: puzzle-result.ts
src/state/: reducer.ts
