[workspace]
resolver = "3"
members = [
    "skyscrapers-cli",
    "skyscrapers-core",
    "skyscrapers-generator",
    "skyscrapers-solver",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.9.2"
rand_chacha = "0.9"
latin-sampler = "0.1"
