[package]
name = "skyscrapers-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "skyscrapers"
path = "src/main.rs"

[dependencies]
skyscrapers-core = { path = "../skyscrapers-core" }
skyscrapers-solver = { path = "../skyscrapers-solver" }
skyscrapers-generator = { path = "../skyscrapers-generator" }
clap = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
