[package]
name = "skyscrapers-generator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
skyscrapers-core = { path = "../skyscrapers-core" }
latin-sampler.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha = "0.9"
