[package]
name = "skyscrapers-generator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
skyscrapers-core = { path = "../skyscrapers-core" }
skyscrapers-solver = { path = "../skyscrapers-solver" }
latin-sampler.workspace = true
rand.workspace = true

[dev-dependencies]
rand_chacha = "0.9"
