[package]
name = "skyscrapers-generator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
skyscrapers-core = { path = "../skyscrapers-core" }
skyscrapers-solver = { path = "../skyscrapers-solver" }
latin-sampler.workspace = true
rand.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
skyscrapers-core = { path = "../skyscrapers-core", features = ["serde"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand_chacha.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
rand_chacha.workspace = true
