[package]
name = "skyscrapers-solver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde", "skyscrapers-core/serde"]

[dependencies]
skyscrapers-core = { path = "../skyscrapers-core" }
serde = { version = "1.0", features = ["derive"], optional = true }
