[package]
name = "skyscrapers-solver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde", "skyscrapers-core/serde"]
# Internal hooks for the workspace's `skyscrapers-analysis` dev tool. Not
# intended for end-user crates: enables a process-global switch that lets
# analysis runs disable individual techniques to measure their necessity.
analysis-hooks = []

[dependencies]
skyscrapers-core = { path = "../skyscrapers-core" }
serde = { version = "1.0", features = ["derive"], optional = true }
