[package]
name = "skyscrapers-tauri"
version = "0.1.1"
description = "Skyscrapers puzzle desktop/mobile app"
authors = ["sugyan"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skyscrapers_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
skyscrapers-core = { path = "../../skyscrapers-core", features = ["serde"] }
skyscrapers-solver = { path = "../../skyscrapers-solver", features = ["serde"] }
skyscrapers-generator = { path = "../../skyscrapers-generator" }
rand_chacha = { workspace = true }
rand = { workspace = true }

